[package]
name = "btc-to-csv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btc_to_csv"
path = "src/main.rs"

[dependencies]
bitcoin  = "0.32"
rusqlite = { version = "0.31", features = ["bundled"] }   # bundled = no system SQLite needed
rocksdb  = { version = "0.22", features = [] }            # UTXO KV store (LSM, fast batch writes)
csv      = "1"
clap     = { version = "4", features = ["derive"] }
anyhow   = "1"
rustc-hash = "2"
itoa       = "1"
hex      = "0.4"
chrono   = { version = "0.4", features = ["clock"] }

[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 1
